# MyCustomEngine

./: CMakeLists.txt
Assets/Shaders/: vertexShader.glsl
include/: Assets.h  OGLShader.h  RenderObject.h  ShaderBase.h  Texture.h  Transform.h  window.h
src/: Assets.cpp  CustomEngine.cpp  OGLShader.cpp  ShaderBase.cpp  Texture.cpp  Transform.cpp  window.cpp
